release/ga/prod/v1.3.0/RELEASE-NOTES.md
# GG-CMS Release Archive — v1.3.0 (prod)

- **Target Environment**: prod
- **Release Version**: v1.3.0
- **Build Timestamp**: 2026-09-20T12:23:48Z
- **Git Commit**: d4bc63d

## Component Version Matrix
- **React UI**: v1.3.0
- **Go Backend**: v1.3.0
- **DB Migrations**: v1.3.0
- **AI Content Factory**: v1.3.0

## Deployment Contract & Security Signature
- **API Contract Version**: v1
- **Deployment Contract**: [deployment-contract.json](./deployment-contract.json)
- **Version Manifest**: [version-manifest.json](./version-manifest.json)

## Recent Change Log (Git Commits)
```
e15c7bf feat(cms): add inline page editing, draft workflow persistence, and admin visual diff overlay
d4bc63d docs: add mandatory codebase-memory-mcp search and auto-reindex rule to workspace rules
72286a1 feat(v1.2.9): unify course runner layout, add top content search, update module/lesson curriculum coverage card, fix card metadata, and integrate contentStateStore progress
8e4c10d feat(v1.2.6): unify standard course runner container card layout with practice runner, add top bar content search input, update search filtering across lesson bodies and remove mock ratings
7cc69c5 feat(courses): unified course runner layout with ModuleLessonNavigator, persistent progress state, removed enrollment barrier, and category select dropdown
5a7be2e docs(release): update v1.2.3 release notes with commit details
31f4e84 feat(courses): category course visibility, dynamic duration, compact practice question navigator grid, and GA v1.2.3 release
de85c0c fix(cms): top-level edit routes, TOC scroll sync, and tag typeahead search
45e7761 fix(preview): practice course layout preview, auto back page refresh, and default reviewer/publisher groups
da1a0b0 release(prod): GA v1.2.0 - high-contrast article/course reader styling and auto scroll TOC navigation
```
